# cv1

./: README.md
.cache/clangd/index/: CameraApi.h.7B853F9CF79429BC.idx  CameraDefine.h.7B54D994919EB3DA.idx  CameraParams.h.A739AFAF9A5E4134.idx  CameraStatus.h.989DBF696E5B1AE5.idx  MvCameraControl.h.39B1B5390F888A6A.idx  MvErrorDefine.h.A0B07EBD8CFC3717.idx  PixelType.h.483B006E9687B84D.idx  armor.hpp.778CC85DCF0AD50B.idx  crc.cpp.FB7B5ABAB77174C2.idx  crc.hpp.F0D573FF5526ED2A.idx  detector.cpp.499A4D09A6F59CE0.idx  detector.hpp.F5AC6E1A36D6CDF8.idx  detector_node.cpp.1DFD2A2BF0788A0E.idx  detector_node.hpp.3AA2E35188F28D47.idx  extended_kalman_filter.cpp.EA233E8E8D78C200.idx  extended_kalman_filter.hpp.2A83CEDD50F0B0C5.idx  hik_camera_node.cpp.5AC303D8953EF4FD.idx  mv_camera_node.cpp.8DDD39B15C2D680C.idx  number_classifier.cpp.D63718A761394851.idx  number_classifier.hpp.6D79F5CB411FDC90.idx  packet.hpp.7C195DD7BA0EFC70.idx  pnp_solver.cpp.5988F8E2D264F68C.idx  pnp_solver.hpp.6F4FA15AA62F91EB.idx  rm_serial_driver.cpp.E448B464F7C49671.idx  rm_serial_driver.hpp.245987DD1BA3030A.idx  test_node_startup.cpp.555318E1FE0BF5EB.idx  test_number_cls.cpp.11FCD709A9F1F8D1.idx  (+4 more)
Camera/Data/: 041181220001.mvdat  041181220011.mvdat
Camera/log/: warning_20250725-120305.6609  warning_20250725-131244.4639  warning_20250725-133338.5523  warning_20250725-203735.4501  warning_20250726-112740.6738  warning_20250726-115640.9113  warning_20250726-121821.9850  warning_20250726-150536.3323  warning_20250726-152242.3550  warning_20250726-160545.5393  warning_20250726-164234.7292  warning_20250727-144052.5272  warning_20250727-145642.5741  warning_20250727-150914.6283  warning_20250727-160955.8942  warning_20250727-162939.9600  warning_20250727-165015.10522
install/: local_setup.sh  setup.sh
install/auto_aim_bringup/share/auto_aim_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/auto_aim_bringup/share/auto_aim_bringup/cmake/: auto_aim_bringupConfig.cmake
install/auto_aim_bringup/share/auto_aim_bringup/launch/: bringup.launch.py
log/: latest_build
src/ballistic_solver/: CMakeLists.txt
src/ballistic_solver/include/ballistic_solver/: SolveTrajectory.hpp
src/ballistic_solver/src/: SolveTrajectory.cpp  ballistic_solver_node.cpp
src/my_vision_bringup/: CMakeLists.txt
src/rm_vision/rm_vision_bringup/: CMakeLists.txt
src/rm_vision/rm_vision_bringup/config/: ballistic_solver.yaml  camera_info.yaml  launch_params.yaml  node_params.yaml
src/rm_vision/rm_vision_bringup/launch/: common.py  vision_bringup.launch.py
(+365 files in other folders)
